log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 08:17:12 PM UTC: 
 tests:  0|6
total_score: 0/70
65d3df4
Wed 29 Mar 2023 08:46:58 PM UTC: 
 arraylist.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:15: error: assignment to ‘void **’ from incompatible pointer type ‘ArrayList *’ {aka ‘struct ArrayList *’} [-Werror=incompatible-pointer-types]
   15 |   aList->data = (ArrayList*) malloc(sizeof(ArrayList));
      |               ^
cc1: all warnings being treated as errors
Compilation failed
bcc857c
Wed 29 Mar 2023 08:47:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:10: error: ‘data’ undeclared (first use in this function)
   15 |   aList *data = (aList*) malloc(sizeof(aList));
      |          ^~~~
arraylist.c:15:10: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:15:24: error: expected expression before ‘)’ token
   15 |   aList *data = (aList*) malloc(sizeof(aList));
      |                        ^
Compilation failed
4dffbcd
Wed 29 Mar 2023 08:47:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:17: error: ‘data’ undeclared (first use in this function)
   15 |   aList->data = data;
      |                 ^~~~
arraylist.c:15:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
329b186
